fix spacing issue with cert container for responsive screen

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -39,11 +39,11 @@ body {
 .container {
     display: grid;
     grid-template-columns: 8rem [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem)[col-end]) [center-end] 8rem [full-end];
-    grid-template-rows: 100vh 80vh 30vh 40vw repeat(4, min-content);
+    grid-template-rows: 100vh 80vh 50vh 40vw repeat(4, min-content);
 
-    @media only screen and (max-width: 1140px){
-        grid-template-rows: 100vh 60vh 40vh 40vw repeat(4, min-content);
-    }
+    // @media only screen and (max-width: 1140px){
+    //     grid-template-rows: 100vh 60vh 40vh 40vw repeat(4, min-content);
+    // }
 
     @media only screen and (max-width: $bp-large){
         grid-template-rows: 100vh 60vh 45vh 40vw repeat(4, min-content); 
